headerからパンくずリストまで実装

--- a/index.html
+++ b/index.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doc</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta content="概要文を120文字程度" name="description">
+  <meta property="og:title" content="ページの タイトル" />
+  <meta property="og:type" content="ページの種類" />
+  <meta property="og:url" content="ページの URL" />
+  <meta property="og:image" content="サムネイル画像の URL" />
+  <meta property="og:site_name" content="サイト名" />
+  <!-- keywordsは一切意味がない -->
+  <meta name="keywords" content="キーワード1,キーワード2,キーワード3">
+  <meta property="og:description" content="ページのディスクリプション" />
+  <title>NRIの強み：ビジネスモデルの特徴 </title>
 </head>
 <body>
+  <header>
+    <h1><img src="images/logo/logo-nri.svg" alt="logo-nri"></h1>
+    <nav>
+      <ul>
+        <li>ナレッジ・インサイト</li>
+        <li>ソリューション・サービス</li>
+        <li>サステナビリティ</li>
+        <li>ニュース</li>
+        <li>企業情報</li>
+        <li>株主・投資家情報</li>
+        <li>採用情報</li>
+      </ul>
+    </nav>
+    <div>
+      <img src="images/icon/header-menu/icon-grass.svg" alt="search">
+      <img src="images/icon/header-menu/icon-earth.svg" alt="world-wide">
+    </div>
+  </header>
+  <main>
+    <div>
+      <ol>
+        <li>NRI&nbsp;トップ</li>
+        <li>企業情報</li>
+        <li>NRIの強み：ビジネスモデルの特徴</li>
+      </ol>
+    </div>
+  </main>
+  <footer></footer>
 </body>
 </html>
