--- a/index.html
+++ b/index.html
@@ -41,7 +41,142 @@
         <li>NRIの強み：ビジネスモデルの特徴</li>
       </ol>
     </div>
+    <div>
+      <p>NRIの強み</p>
+      <h1>NRIのデジタルビジネス戦略</h1>
+    </div>
+    <div>
+      Share
+      <img src="images/icon/sns/icon-facebook.svg" alt="facebook">
+      <img src="images/icon/sns/icon-twitter.svg" alt="twitter">
+      <img src="images/icon/sns/icon-linkedin.svg" alt="linkedin">
+    </div>
+    <article>
+      <section>
+        <h2>NRIのデジタルビジネス戦略</h2>
+        <p>NRI では、企業の DX に向けた取り組みについて、既存ビジネスの業務プロセス変革に寄与する DX を「DX1.0」、デジタルで新しいビジネスモデルそのものを生み出す DX を「DX2.0」と定義しています。</p>
+        <p>DX を実現するためには、業務プロセス変革やビジネスモデル創造、そして、それらを実現する IT を同時並行で、共に議論しながら、かつ、スピーディーに実装できる戦略パートナーが必要です。NRI は、コンサルティングと IT ソリューションの人材と機能を併せ持ち、お客さまと併走し、お客さまと仮説検証を繰り返しながらビジネスを創出する「コンソリューション」の提供を強みとして、DX の実現を推進します。</p>
+        <img src="images/story06_img_01.jpg" alt="story">
+        <a href="#">デジタルが拓く近未来</a>
+        <div>
+          <a href="#" alt="">ビジネスモデルの特徴</a>
+          <a href="#" alt="">人材が支えるNRI</a>
+        </div>
+      </section>
+      <section>
+        <ul>
+          <li><a href="#">NRIのあゆみと持続的な成長</a></li>
+          <li><a href="#">問題発見から問題解決まで</a></li>
+          <li><a href="#">強固な顧客基盤</a></li>
+          <li><a href="#">ビジネスモデルの特徴</a></li>
+          <li><a href="#">人材が支えるNRI</a></li>
+          <li><a href="#">業界トップクラスの収益力</a></li>
+        </ul>
+      </section>
+      <section>
+        <h2>企業情報</h2>
+        <section>
+          <h3>経営方針</h3>
+        </section>
+        <section>
+          <h3>企業案内</h3>
+        </section>
+        <section>
+          <h3>NRIの強み</h3>
+        </section>
+        <section>
+          <h3>NRIグループ国内・海外拠点一覧</h3>
+        </section>
+        <section>
+          <h3>事業案内</h3>
+        </section>
+        <div>
+          <a href="#">前のページに戻る</a>
+        </div>
+      </section>
+    </article>
   </main>
-  <footer></footer>
+  <footer>
+    <section>
+      Follow Us
+      <img src="images/icon/sns/icon-facebook.svg" alt="facebook">
+      <img src="images/icon/sns/icon-twitter.svg" alt="twitter">
+      <img src="images/icon/sns/icon-linkedin.svg" alt="linkedin">
+    </section>
+    <section>
+      <ul>
+        <li><a href="#">ナレッジ・インサイト</a></li>
+        <li><a href="#">刊行物</a></li>
+        <li><a href="#">書籍</a></li>
+        <li><a href="#">コラム</a></li>
+        <li><a href="#">セミナー資料</a></li>
+        <li><a href="#">レポート</a></li>
+        <li><a href="#">用語解説</a></li>
+      </ul>
+      <ul>
+        <li><a href="#">ソリューション・サービス</a></li>
+        <li><a href="#">マネジメントコンサルティング</a></li>
+        <li><a href="#">システムコンサルティング</a></li>
+        <li><a href="#">金融ITソリューション</a></li>
+        <li><a href="#">産業ITソリューション</a></li>
+        <li><a href="#">IT基盤サービス</a></li>
+        <li><a href="#">ソリューション・製品・サービス</a></li>
+        <li><a href="#">お客様事例</a></li>
+        <li><a href="#">未来創発センター</a></li>
+      </ul>
+      <ul>
+        <li><a href="#">サステナビリティ</a></li>
+        <li><a href="#">サステナビリティマネジメント</a></li>
+        <li><a href="#">取組み</a></li>
+        <li><a href="#">ライブラリ</a></li>
+      </ul>
+      <ul>
+        <li><a href="#">ニュース</a></li>
+        <li><a href="#">ニュースリリース</a></li>
+        <li><a href="#">お知らせ</a></li>
+        <li><a href="#">イベント</a></li>
+      </ul>
+      <ul>
+        <li><a href="#">企業情報</a></li>
+        <li><a href="#">社長メッセージ</a></li>
+        <li><a href="#">経営方針</a></li>
+        <li><a href="#">NRIの強み</a></li>
+        <li><a href="#">企業案内</a></li>
+        <li><a href="#">国内・海外拠点</a></li>
+      </ul>
+      <ul>
+        <li><a href="#">株主・投資家情報（IR）</a></li>
+        <li><a href="#">IRニュース</a></li>
+        <li><a href="#">IRイベント</a></li>
+        <li><a href="#">経営方針</a></li>
+        <li><a href="#">財務・業績</a></li>
+        <li><a href="#">IRライブラリ</a></li>
+        <li><a href="#">株式・格付情報</a></li>
+        <li><a href="#">個人投資家の皆様へ</a></li>
+      </ul>
+      <ul>
+        <li><a href="#">採用情報</a></li>
+        <li><a href="#">NRI&nbsp;JOURNAL</a></li>
+        <li><a href="#">NPI&nbsp;PEOPLE</a></li>
+      </ul>
+      <ul>
+        <li><a href="#">メディア関係者様の皆様へ</a></li>
+        <li><a href="#">ビジネスパートナーの皆様へ</a></li>
+        <li><a href="#">サイトマップ</a></li>
+      </ul>
+    </section>
+    <section>
+      <ul>
+        <li><a href="#">免責条項</a></li>
+        <li><a href="#">サイト利用規程</a></li>
+        <li><a href="#">個人情報保護方針</a></li>
+        <li><a href="#">個人情報の取り扱いについて</a></li>
+        <li><a href="#">情報セキュリティについての宣言文</a></li>
+        <li><a href="#">お問い合わせ</a></li>
+        <li><a href="#">アクセスマップ</a></li>
+      </ul>
+    </section>
+    <small>Copyright(c) Nomura Research Institute, Ltd. All rights reserved.</small>
+  </footer>
 </body>
 </html>
