headerのメニュー部分をリンクに修正

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:url" content="ページの URL" />
   <meta property="og:image" content="サムネイル画像の URL" />
   <meta property="og:site_name" content="サイト名" />
-  <!-- keywordsは一切意味がない -->
+  <!-- keywordsはSEO的に一切意味がない -->
   <meta name="keywords" content="キーワード1,キーワード2,キーワード3">
   <meta property="og:description" content="ページのディスクリプション" />
   <title>NRIの強み：ビジネスモデルの特徴 </title>
@@ -19,18 +19,18 @@
     <h1><img src="images/logo/logo-nri.svg" alt="logo-nri"></h1>
     <nav>
       <ul>
-        <li>ナレッジ・インサイト</li>
-        <li>ソリューション・サービス</li>
-        <li>サステナビリティ</li>
-        <li>ニュース</li>
-        <li>企業情報</li>
-        <li>株主・投資家情報</li>
-        <li>採用情報</li>
+        <li><a href="#">ナレッジ・インサイト</a></li>
+        <li><a href="#">ソリューション・サービス</a></li>
+        <li><a href="#">サステナビリティ</a></li>
+        <li><a href="#">ニュース</a></li>
+        <li><a href="#">企業情報</a></li>
+        <li><a href="#">株主・投資家情報</a></li>
+        <li><a href="#">採用情報</a></li>
       </ul>
     </nav>
     <div>
-      <img src="images/icon/header-menu/icon-grass.svg" alt="search">
-      <img src="images/icon/header-menu/icon-earth.svg" alt="world-wide">
+      <a href="#"><img src="images/icon/header-menu/icon-grass.svg" alt="search"></a>
+      <a href="#"><img src="images/icon/header-menu/icon-earth.svg" alt="world-wide"></a>
     </div>
   </header>
   <main>
