aタグにalt属性が入っていた不具合を修正

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <img src="images/story06_img_01.jpg" alt="story">
         <a href="#">デジタルが拓く近未来</a>
         <div>
-          <a href="#" alt="">ビジネスモデルの特徴</a>
-          <a href="#" alt="">人材が支えるNRI</a>
+          <a href="#">ビジネスモデルの特徴</a>
+          <a href="#">人材が支えるNRI</a>
         </div>
       </section>
       <section>
