--- a/index.html
+++ b/index.html
@@ -62,8 +62,6 @@
           <a href="#">ビジネスモデルの特徴</a>
           <a href="#">人材が支えるNRI</a>
         </div>
-      </section>
-      <section>
         <ul>
           <li><a href="#">NRIのあゆみと持続的な成長</a></li>
           <li><a href="#">問題発見から問題解決まで</a></li>
@@ -97,13 +95,13 @@
     </article>
   </main>
   <footer>
-    <section>
+    <div>
       Follow Us
       <img src="images/icon/sns/icon-facebook.svg" alt="facebook">
       <img src="images/icon/sns/icon-twitter.svg" alt="twitter">
       <img src="images/icon/sns/icon-linkedin.svg" alt="linkedin">
-    </section>
-    <section>
+    </div>
+    <div>
       <ul>
         <li><a href="#">ナレッジ・インサイト</a></li>
         <li><a href="#">刊行物</a></li>
@@ -164,8 +162,8 @@
         <li><a href="#">ビジネスパートナーの皆様へ</a></li>
         <li><a href="#">サイトマップ</a></li>
       </ul>
-    </section>
-    <section>
+    </div>
+    <div>
       <ul>
         <li><a href="#">免責条項</a></li>
         <li><a href="#">サイト利用規程</a></li>
@@ -175,7 +173,7 @@
         <li><a href="#">お問い合わせ</a></li>
         <li><a href="#">アクセスマップ</a></li>
       </ul>
-    </section>
+    </div>
     <small>Copyright(c) Nomura Research Institute, Ltd. All rights reserved.</small>
   </footer>
 </body>
