PDFへのリンク部分のコンテンツを修正

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             の実現を推進します。
           </p>
           <img src="images/story06_img_01.jpg" alt="story" />
-          <a href="#">デジタルが拓く近未来</a>
+          <a href="#">デジタルが拓く近未来(NRIのDX)<br/>(4.06&nbsp;MB)<img src="images/icon/others/icon-pdf.svg" alt="icon-pdf"></a>
           <div>
             <a href="#">ビジネスモデルの特徴</a>
             <a href="#">人材が支えるNRI</a>
