--- a/index.html
+++ b/index.html
@@ -74,7 +74,11 @@
             の実現を推進します。
           </p>
           <img src="images/story06_img_01.jpg" alt="story" />
-          <a href="#">デジタルが拓く近未来(NRIのDX)<br/>(4.06&nbsp;MB)<img src="images/icon/others/icon-pdf.svg" alt="icon-pdf"></a>
+          <a href="#"
+            >デジタルが拓く近未来(NRIのDX)<br />(4.06&nbsp;MB)<img
+              src="images/icon/others/icon-pdf.svg"
+              alt="icon-pdf"
+          /></a>
           <div>
             <a href="#">ビジネスモデルの特徴</a>
             <a href="#">人材が支えるNRI</a>
@@ -92,18 +96,58 @@
           <h2>企業情報</h2>
           <section>
             <h3>経営方針</h3>
+            <ul>
+              <li><a href="#">社長メッセージ</a></li>
+              <li><a href="#">企業理念</a></li>
+              <li><a href="#">経営ビジョン</a></li>
+              <li><a href="#">品質向上・リスク管理</a></li>
+              <li><a href="#">人材の育成</a></li>
+              <li><a href="#">内部統制</a></li>
+              <li><a href="#">NRIグループ企業行動原則</a></li>
+              <li><a href="#">NRIグループビジネス行動基準</a></li>
+              <li><a href="#">コーポレート・ガバナンス</a></li>
+              <li><a href="#">事業等のリスク</a></li>
+              <li><a href="#">NRIグループの調達方針</a></li>
+            </ul>
           </section>
           <section>
             <h3>企業案内</h3>
+            <ul>
+              <li><a href="#">会社概要</a></li>
+              <li><a href="#">沿革</a></li>
+              <li><a href="#">組織図</a></li>
+              <li><a href="#">役員構成</a></li>
+              <li><a href="#">未来創発の軌跡</a></li>
+            </ul>
           </section>
           <section>
             <h3>NRIの強み</h3>
+            <ul>
+              <li><a href="#">NRIのあゆみと持続的な成長</a></li>
+              <li><a href="#">問題発見から問題解決まで</a></li>
+              <li><a href="#">強固な顧客基盤</a></li>
+              <li><a href="#">ビジネスモデルの特徴</a></li>
+              <li><a href="#">NRIのデジタルビジネス戦略</a></li>
+              <li><a href="#">人材が支えるNRI</a></li>
+              <li><a href="#">業界トップクラスの収益力</a></li>
+            </ul>
           </section>
           <section>
             <h3>NRIグループ国内・海外拠点一覧</h3>
+            <ul>
+              <li><a href="#">メインオフィス</a></li>
+              <li><a href="#">グループカンパニー</a></li>
+              <li><a href="#">その他の関連会社・団体</a></li>
+            </ul>
           </section>
           <section>
             <h3>事業案内</h3>
+            <ul>
+              <li><a href="#">コンサルティング</a></li>
+              <li><a href="#">金融ITソリューション</a></li>
+              <li><a href="#">産業ITソリューション</a></li>
+              <li><a href="#">IT基盤サービス</a></li>
+            </ul>
           </section>
           <div>
             <a href="#">前のページに戻る</a>
